# artifact-keeper

./: .env.example  docker-compose.local-dev.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml  sonarcloud-gate.yml
backend/: Cargo.toml
backend/migrations/: 066_refresh_token_allowlist.sql  067_access_token_blocklist.sql
backend/src/: config.rs  main.rs
backend/src/api/: mod.rs  routes.rs
backend/src/api/handlers/: alpine.rs  ansible.rs  approval.rs  artifacts.rs  auth.rs  cargo.rs  chef.rs  cocoapods.rs  composer.rs  conan.rs  conda.rs  cran.rs  debian.rs  events.rs  gitlfs.rs  goproxy.rs  health.rs  helm.rs  hex.rs  huggingface.rs  incus.rs  jetbrains.rs  maven.rs  mod.rs  npm.rs  nuget.rs  oci_v2.rs  packages.rs  peers.rs  promotion.rs  protobuf.rs  pub_registry.rs  puppet.rs  pypi.rs  repositories.rs  rpm.rs  rubygems.rs  sbt.rs  swift.rs  terraform.rs  (+3 more)
backend/src/api/middleware/: auth.rs
backend/src/grpc/: auth_interceptor.rs  sbom_server.rs
backend/src/services/: artifactory_client.rs  audit_service.rs  auth_service.rs  dependency_track_service.rs  health_monitor_service.rs  http_client.rs  image_scanner.rs  ldap_service.rs  mod.rs  nexus_client.rs  oidc_service.rs  openscap_scanner.rs  peer_service.rs  plugin_service.rs  proxy_service.rs  scanner_service.rs  storage_service.rs  sync_worker.rs
backend/src/storage/: azure.rs  filesystem.rs  gcs.rs
backend/tests/: incus_upload_tests.rs  integration_tests.rs  security_tests.rs
docker/: Dockerfile.backend  Dockerfile.backend.alpine
docs/plans/: 2026-03-02-unified-auth-middleware-design.md  2026-03-02-unified-auth-middleware.md
scripts/: e2e-setup.sh  run-e2e-tests.sh  test-private-repo-visibility.sh  test-soft-delete-reupload.sh
scripts/native-tests/: run-all.sh  test-hex.sh  test-proxy-virtual.sh
