[package]
name = "artifact-keeper-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "artifact-keeper"
path = "src/main.rs"

[features]
vendored-openssl = ["openssl/vendored"]

[dependencies]
openssl = { workspace = true, optional = true }
# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Authentication
jsonwebtoken.workspace = true
bcrypt.workspace = true

# Checksums
sha2.workspace = true
md-5.workspace = true
sha1.workspace = true
hmac.workspace = true
blake2 = "0.10"

# Encryption
aes-gcm.workspace = true

# S3 storage using rust-s3 crate
rust-s3.workspace = true

# TLS (explicit provider selection for rustls 0.23+)
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# Logging/Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# OpenTelemetry
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true

# Metrics
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Config
dotenvy.workspace = true

# UUID
uuid.workspace = true

# Time
chrono.workspace = true
cron.workspace = true

# HTTP client
reqwest.workspace = true

# URL encoding
serde_urlencoded.workspace = true

# Async streams
futures.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
bytes.workspace = true

# CLI
clap.workspace = true

# Additional
async-trait = "0.1"
async-stream = "0.3"
hex = "0.4"
rand = "0.9"

# Format parsing
quick-xml = { version = "0.39", features = ["serialize"] }
flate2 = "1.0"
tar = "0.4"
xz2 = "0.1"
mime_guess = "2.0"
zip = "2.2"
toml = "0.8"
serde_yaml = "0.9"
regex = "1.11"
bzip2 = "0.5"
zstd = "0.13"
rmp-serde = "1.3"

# WASM runtime
wasmtime.workspace = true
wasmtime-wasi.workspace = true

# Git operations
git2.workspace = true

# Base64 encoding
base64 = "0.22"
totp-rs = { version = "5", features = ["qr", "gen_secret"] }

# Search engine
meilisearch-sdk = { workspace = true }

# Temp files
tempfile = "3.16"

# Directory walking
walkdir = "2.5"
rsa = { version = "0.9", features = ["sha2"] }
urlencoding = "2.1.3"
ldap3 = "0.11"

# OpenAPI
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true

# gRPC
tonic.workspace = true
tonic-reflection.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tokio-test = "0.4"
axum-test = "16"
wiremock = "0.6"
